test/langtools/tools/javac/lambda/methodReference/MethodRefToInnerWithoutOuter.out
MethodRefToInnerWithoutOuter.java:22:31: compiler.err.non-static.cant.be.ref: kindname.variable, this
1 error
